--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,9 @@ on:
   push:
     branches:
       - main
+env:
+  PNPM_VERSION: '9.1.4'
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-22.04
@@ -14,10 +17,11 @@ jobs:
         node-version: [22]
     steps:
       - uses: actions/checkout@v4
+
       - name: Install pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 9
+          version: ${{ env.PNPM_VERSION }}
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
