--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,25 @@ yarn-error.log*
 .env
 .vscode
 *.secrets
+.vscode/
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+
+# build output
+.firebase
+.npm/**
+
+
+
+
