--- a/firebase.json
+++ b/firebase.json
@@ -1,17 +1,37 @@
 {
-  "hosting": {
-      "public": "dist",
-      "ignore": [
-          "**/.*",
-          "firebase.json",
-          "**/node_modules/**",
-          "makefile"
-      ],
-      "rewrites": [
-          {
-              "source": "**",
-              "destination": "/index.html"
-          }
-      ]
-  }
+    "hosting": {
+        "public": "dist/spa",
+        "ignore": [
+            "**/.*",
+            "firebase.json",
+            "**/node_modules/**",
+            "makefile"
+        ],
+        "rewrites": [
+            {
+                "source": "**",
+                "destination": "/index.html"
+            }
+        ],
+        "headers": [
+            {
+                "source": "/**",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "no-cache, no-store, must-revalidate"
+                    }
+                ]
+            },
+            {
+                "source": "**/*.@(jpg|jpeg|gif|png|svg|webp|js|css|eot|otf|ttf|ttc|woff|woff2|font.css)",
+                "headers": [
+                    {
+                        "key": "Cache-Control",
+                        "value": "max-age=604800"
+                    }
+                ]
+            }
+        ]
+    }
 }
