--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "add": "^2.0.6",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.4",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
@@ -22,6 +24,7 @@
   "devDependencies": {
     "@quasar/app-vite": "^1.9.0",
     "autoprefixer": "^10.4.2",
+    "dotenv": "^16.4.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
