--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,6 +8,7 @@ on:
       - main
 env:
   PNPM_VERSION: '9.1.4'
+  env_var: 'dev'
 
 jobs:
   build_and_deploy:
@@ -29,6 +30,14 @@ jobs:
       - name: Install dependencies
         run: pnpm add -g @quasar/cli && pnpm install && quasar build
       - uses: FirebaseExtended/action-hosting-deploy@v0
+        env:
+          API_KEY: "${{ secrets.API_KEY }}"
+          AUTH_DOMAIN: "${{ vars.AUTH_DOMAIN }}"
+          PROJECT_ID: "${{ vars.PROJECT_ID }}"
+          STORAGE_BUCKET: "${{ vars.STORAGE_BUCKET }}"
+          APP_ID: "${{ vars.APP_ID }}"
+          MESSAGING_SENDER_ID: "${{ vars.MESSAGING_SENDER_ID }}"
+          MEASUREMENT_ID: "${{ vars.MEASUREMENT_ID }}"
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TESTING_40917 }}"
