--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -31,13 +31,13 @@ jobs:
         run: pnpm add -g @quasar/cli && pnpm install && quasar build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         env:
-          API_KEY: "${{ secrets.API_KEY }}"
-          AUTH_DOMAIN: "${{ env.AUTH_DOMAIN }}"
-          PROJECT_ID: "${{ env.PROJECT_ID }}"
-          STORAGE_BUCKET: "${{ env.STORAGE_BUCKET }}"
-          APP_ID: "${{ env.APP_ID }}"
-          MESSAGING_SENDER_ID: "${{ env.MESSAGING_SENDER_ID }}"
-          MEASUREMENT_ID: "${{ env.MEASUREMENT_ID }}"
+          API_KEY: ${{ secrets.API_KEY }}
+          AUTH_DOMAIN: ${{ vars.AUTH_DOMAIN }}
+          PROJECT_ID: ${{ vars.PROJECT_ID }}
+          STORAGE_BUCKET: ${{ vars.STORAGE_BUCKET }}
+          APP_ID: ${{ vars.APP_ID }}
+          MESSAGING_SENDER_ID: ${{ vars.MESSAGING_SENDER_ID }}
+          MEASUREMENT_ID: ${{ vars.MEASUREMENT_ID }}
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TESTING_40917 }}"
