--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "add": "^2.0.6",
     "axios": "^1.7.2",
     "firebase": "^10.12.4",
+    "lodash": "^4.17.21",
     "quasar": "^2.16.0",
     "vue": "^3.4.18",
     "vue-router": "^4.0.12"
