--- a/.github/workflows/lighthouse-deploy-prod.yml
+++ b/.github/workflows/lighthouse-deploy-prod.yml
@@ -43,3 +43,16 @@ jobs:
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TESTING_40917 }}"
           channelId: live
           projectId: testing-40917
+      # - name: Audit URLs using Lighthouse
+      #   id: lighthouse_audit
+      #   uses: treosh/lighthouse-ci-action@v7
+      #   with:
+      #       # add as many urls here as you wish to audit
+      #       # prefixed by the preview-url
+      #       urls: |
+      #           ${{ steps.vercel_action.outputs.preview-url }}
+      #           ${{ steps.vercel_action.outputs.preview-url }}/page1
+      #       budgetPath: '.github/lighthouse/budget.json'
+      #       uploadArtifacts: true
+      #       temporaryPublicStorage: true
+      #       runs: 3
