--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -29,17 +29,17 @@ jobs:
           cache: 'pnpm'
       - name: Install dependencies
         env:
-          API_KEY: ${{ secrets.API_KEY }}
-          AUTH_DOMAIN: ${{ secrets.AUTH_DOMAIN }}
-          PROJECT_ID: ${{ secrets.PROJECT_ID }}
-          STORAGE_BUCKET: ${{ secrets.STORAGE_BUCKET }}
-          APP_ID: ${{ secrets.APP_ID }}
-          MESSAGING_SENDER_ID: ${{ secrets.MESSAGING_SENDER_ID }}
-          MEASUREMENT_ID: ${{ secrets.MEASUREMENT_ID }}
+          API_KEY: "AIzaSyAL5cNWwfnYMnKVtIcDXL-ycHsjGvtnqRs"
+          AUTH_DOMAIN: "testing-40917.firebaseapp.com"
+          PROJECT_ID: "testing-40917"
+          STORAGE_BUCKET: "testing-40917.appspot.com"
+          APP_ID: "1:60050837084:web:9350a34b710c5ced67e099"
+          MESSAGING_SENDER_ID: "60050837084"
+          MEASUREMENT_ID: "G-MBHSN5X03W"
         run: pnpm add -g @quasar/cli && pnpm install && quasar build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: "${{ secrets.FIREBASE_SERVICE_ACCOUNT_TESTING_40917 }}"
-          channelId: preview
+          channelId: live
           projectId: testing-40917
